testdata/baselines/reference/submodule/conformance/nodeModulesImportAttributes(module=node20).errors.txt
otherc.cts(1,35): error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
otherc.cts(2,40): error TS1324: Dynamic imports only support a second argument when the '--module' option is set to 'esnext', 'node16', 'node18', 'node20', 'nodenext', or 'preserve'.


==== index.ts (0 errors) ====
    import json from "./package.json" with { type: "json" };
==== otherc.cts (2 errors) ====
    import json from "./package.json" with { type: "json" }; // should error, cjs mode imports don't support attributes
                                      ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2856: Import attributes are not allowed on statements that compile to CommonJS 'require' calls.
    const json2 = import("./package.json", { with: { type: "json" } }); // should be fine
                                           ~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS1324: Dynamic imports only support a second argument when the '--module' option is set to 'esnext', 'node16', 'node18', 'node20', 'nodenext', or 'preserve'.
==== package.json (0 errors) ====
    {
        "name": "pkg",
        "private": true,
        "type": "module"
    }
    